# ASTS

./: .env.example  .gitignore  README.md  docker-compose.yml
.githooks/: pre-push
.github/: pull_request_template.md
.github/workflows/: pages.yml
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/tenders/: models.py  repository.py  router.py
apps/api/tests/: test_main.py
apps/web/: README.md  next-env.d.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
docs/: 00-product-vision.md  00-project-brief-ru.md  01-mvp-scope.md  02-architecture.md  03-data-model.md  04-ai-pipeline.md  05-api-contract.md  06-data-outputs.md  07-stack-decision.md  08-roadmap.md  09-commercial-model.md  10-risks.md  11-local-development.md  12-team-workflow-ru.md  13-b2g-rtb-analysis-ru.md  14-ai-rebuild-roadmap-ru.md  15-primary-source-policy-ru.md  15-zakupki-data-access-checklist-ru.md  16-b2g-mind-map-registry-ru.md  17-platform-delivery-and-integrations-ru.md
infra/: README.md
scripts/: README.md
workdesk/: index.html  styles.css
